# radium-engine-v2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cfg  todo.md
engine/include/: engine.hpp  utils.hpp
engine/include/HotReloading/: fileHandler.hpp
engine/include/ecs/: ECSManager.hpp  componentPool.hpp  components.hpp
engine/include/rendering/: meshBuilder.hpp  renderSystem.hpp  shaderManager.hpp
engine/shaders/: f_frag.glsl  f_mandelbrot.glsl  v_vert.glsl
engine/src/: engine.cpp  utils.cpp
engine/src/HotReloading/: fileHandler.cpp
engine/src/rendering/: meshBuilder.cpp  renderSystem.cpp  shaderManager.cpp
game/src/: main.cpp
